--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://whatislove23/react-focus-timer",
   "name": "my-pomidoro",
   "version": "0.1.0",
   "private": false,
@@ -10,7 +11,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.1",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap-range-slider": "^3.0.8",
     "react-circle-slider": "^1.6.2",
@@ -35,11 +35,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve -s build",
+    "predeploy":"npm run buld",
+    "deploy":"gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "react-circular-slider-bar": "^1.3.1"
   }
 }
